content update to tools

--- a/views/index.html
+++ b/views/index.html
@@ -93,7 +93,7 @@
 			<div id='review-carousel' class='carousel slide text-center'>
 				<div class='carousel-inner'>
 					<div class='item active'>
-						<P class='quote' style='text-align:left'>"Adam has been great to work with, I have worked with him on multiple game projects as well as side projects in our spare time. He is unbelievably hard working and motivated in everything he does."<br/><b style='float:right'>-DAVID JAMES / SDE Microsoft</b></P>
+						<P class='quote' style='text-align:left'>"Adam has been great to work with, I have worked with him on multiple game projects as well as side projects in our spare time. He is unbelievably hard working and motivated in everything he does."<br/><br/><b style='float:right'>-DAVID JAMES / SDE Microsoft</b></P>
 					</div>
 					<div class='item'>
 						<P class='quote' style='text-align:left'>"I've worked with Adam on two student games and couldn't recommend him more. He's a great programmer and always keeps his mind on the big picture. Both projects were delivered in a completed state and were fun to work on."<br/><br/><b style='float:right'>-JORDAN MAPLES / SDET Microsoft</b></p>
