--- a/views/index.html
+++ b/views/index.html
@@ -30,6 +30,7 @@
 	<script src='../controllers/skills.js'></script>
 	<script src='../controllers/portfolio.js'></script>
 	<script src='../controllers/nav.js'></script>
+	<script src='../controllers/contact.js'></script>
 
 	<script>
 	  $(document).ready(function(){
@@ -331,7 +332,7 @@
 			</div>
 		</div>
 	</div>
-	<div class='container-fluid screen' id='contact-screen'>
+	<div class='container-fluid screen' id='contact-screen' ng-controller='ContactController'>
 		<div class='row'>
 			<header class='col-xs-12 text-center section-title'>
 				<h1 class='inverse'>CONTACT</h1>
@@ -348,7 +349,7 @@
 			</div>
 			<div class='col-xs-4 col-xs-offset-1 section'>
 				<h2 style='color:white'><b>Let's chat!</b></h2>
-				<form class="form-horizontal" role="form" method='post' action='../contact.php'>
+				<form class="form-horizontal" role="form" method='post'>
 				<div class="form-group">
 				    <label for="contactName" class="col-xs-1 control-label">Name</label>
 				    <div class="col-xs-12">
@@ -369,7 +370,7 @@
 				  </div>
 				  <div class="form-group">
 				    <div class="col-xs-12">
-				      <input id='send-email-button' name='submit' type="submit" class="btn-lg"></input>
+				      <input id='send-email-button' ng-click='sendEmail();' name='submit' type="submit" class="btn-lg"></input>
 				    </div>
 				  </div>
 				</form>
