mail delivery complete

--- a/views/index.html
+++ b/views/index.html
@@ -346,6 +346,10 @@
 				<p class='text' style='color:white'>1321 Minor Ave #B504, Seattle, WA 98101</p>
 				<p class='text' style='color:white'>(509) 494-4676</p>
 				<p class='text' style='color:white'>adamestela@gmail.com</p>
+				<div id='message-sent'>
+					<h1 style='color:white;margin-top:100px;'>Message sent!</h1>
+					<h2 style='color:white;'>Thank you for visiting! I will respond as soon as possible.</h2>
+				</div>
 			</div>
 			<div class='col-xs-4 col-xs-offset-1 section'>
 				<h2 style='color:white'><b>Let's chat!</b></h2>
