--- a/views/index.html
+++ b/views/index.html
@@ -100,7 +100,7 @@
 						<P class='quote' style='text-align:left'>"I've worked with Adam on two student games and couldn't recommend him more. He's a great programmer and always keeps his mind on the big picture. Both projects were delivered in a completed state and were fun to work on."<br/><br/><b style='float:right'>-JORDAN MAPLES / SDET Microsoft</b></p>
 					</div>
 					<div class='item'>
-						<P class='quote' style='text-align:left'>"Adam is sexy."<br/><br/><b style='float:right'>-ANDREW NACK / Artist Signal Studios</b></p>
+						<P class='quote' style='text-align:left'>"Adam Estela is a friendly, high-performing team member. I'd enjoy working with him again any time."<br/><br/><b style='float:right'>-ANDREW NACK / Technical Designer Signal Studios</b></p>
 					</div>
 				</div>
 
@@ -337,7 +337,7 @@
 			<header class='col-xs-12 text-center section-title'>
 				<h1 class='inverse'>CONTACT</h1>
 				<div class='underline underline-inverse'></div>
-				<!--h2 class='inverse'>Currently interested in opportunities.</h2-->
+				<h2 class='inverse'>Currently interested in opportunities.</h2>
 			</header>
 		</div>
 		<div class='row'>
