--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -29,7 +29,7 @@
 
 	float:left;
 
-	margin: 7px 5px;
+	margin: 7px 2px;
 	padding:0px 10px;
 }
 
@@ -64,4 +64,12 @@
 .btn.active{
 	background-color:#3498DB; 
 	color: white;
+}
+
+.info-icon{
+	width:25px;
+	height:25px;
+	border:1px solid white;
+	border-radius: 50%;
+	padding:2px;
 }
