--- a/views/index.html
+++ b/views/index.html
@@ -123,7 +123,7 @@
 				<img src="../resources/test-icon.jpg" class="img-responsive">
 			</div>
 			<div class='col-xs-6 col-xs-offset-1 text'>
-				<span class='text-header'>TEST&nbsp;&nbsp;</span><span>I am one of two automated testers at PaperG, Inc. Initially, my scope of responsibility included building automated UI tests, but I quickly expanded to focus on infrastructure. I've worked on our continuous integration pipeline, set up test frameworks for other devs, written tools for other test automators, and, of course, written tests. I've successfully helped reduce bug turn around time and false negatives.</span>
+				<span class='text-header'>TEST&nbsp;&nbsp;</span><span>I am one of two automated testers at PaperG, Inc. Initially, my scope of responsibility included building automated UI tests, but I quickly expanded to focus on infrastructure. I've worked on our continuous integration pipeline, set up test frameworks for other devs, written tools for other test automators, and, of course, written tests. I've successfully helped reduce bug turn-around time and false negatives.</span>
 			</div>
 		</div>
 		<div class='row section'>
@@ -235,7 +235,7 @@
 						<li><p>Improving tests and tools to provide more reliable feedback</p></li>
 						<li><p>Experimenting with potential tools and processes for further improvement</p></li>
 					</ul>
-					I quickly grasped Javascript, Java, HTML, and CSS as well as several tools that allowed me to work more affectively. Within a week I was contributing code, and after 4 months, I was promoted. 
+					I quickly grasped Javascript, Java, HTML, and CSS as well as several tools that allowed me to work more effectively. Within a week I was contributing code, and after 4 months, I was promoted. 
 				</p>
 			</div>
 			<div class='col-xs-4 text'>
@@ -249,7 +249,7 @@
 						<li><p>Game Implementation Techniques [Building a game engine]</p></li>
 						<li><p>English</p></li>
 					</ul>
-					I also served as the academic support tutor for CS, Mathematics, and English where I patiently assisted students through problems, aided in debugging, explained concepts, and offered encouragement. Near the end of my education, I interened in DigiPen's research and development department.
+					I also served as the academic support tutor for CS, Mathematics, and English where I patiently assisted students through problems, aided in debugging, explained concepts, and offered encouragement. Near the end of my education, I interned in DigiPen's research and development department.
 				</p>
 			</div>
 		</div>
