--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,7 @@
 	<link rel='stylesheet' type='text/css' href='../styles/skills.css' />
 	<link rel='stylesheet' type='text/css' href='../styles/portfolio.css' />
 	<link rel='stylesheet' type='text/css' href='../styles/contact.css' />
-	<link rel='stylesheet' type='text/css' href='../styles/overview.css' />
+	<link rel='stylesheet' type='text/css' href='../styles/fades.css' />
 	
 	<!-- jQuery for bootstrap and minor animations -->
 	<script src="../bower_components/jquery/dist/jquery.min.js"></script>
@@ -111,27 +111,27 @@
 			</header>
 		</div>
 		<div class='row section'>
-			<div id='gamesOverviewIcon' class='col-xs-1 col-xs-offset-2 overviewIcon'>
+			<div id='gamesOverviewIcon' class='col-xs-1 col-xs-offset-2 fadeInBottom'>
 				<img src="../resources/game-icon.jpg" class="img-responsive">
 			</div>
-			<div id='gamesOverview' class='col-xs-6 col-xs-offset-1 text overviewDescription'>
+			<div id='gamesOverview' class='col-xs-6 col-xs-offset-1 text fadeInRight'>
 				<span class='text-header'>GAMES&nbsp;&nbsp;</span><span>My foundation lies in low level programming (C/C++) which I used to build several game engines from the ground up with teams of four developers. On these teams I not only acted as developer, but producer, where I ensured complete milestones and product delivery. I built five complete games during my 3.5 years of matriculation and have written tens of thousands of lines of code.  
 				</span>
 			</div>
 		</div>
 		<div class='row section'>
-			<div id='testOverviewIcon' class='col-xs-1 col-xs-offset-2 overviewIcon'>
+			<div id='testOverviewIcon' class='col-xs-1 col-xs-offset-2 fadeInBottom'>
 				<img src="../resources/test-icon.jpg" class="img-responsive">
 			</div>
-			<div id='testOverview' class='col-xs-6 col-xs-offset-1 text overviewDescription'>
+			<div id='testOverview' class='col-xs-6 col-xs-offset-1 text fadeInRight'>
 				<span class='text-header'>TEST&nbsp;&nbsp;</span><span>I am one of two automated testers at PaperG, Inc. Initially, my scope of responsibility included building automated UI tests, but I quickly expanded to focus on infrastructure. I've worked on our continuous integration pipeline, set up test frameworks for other devs, written tools for other test automators, and, of course, written tests. I've successfully helped reduce bug turn-around time and false negatives.</span>
 			</div>
 		</div>
 		<div class='row section'>
-			<div id='webOverviewIcon' class='col-xs-1 col-xs-offset-2 overviewIcon'>
+			<div id='webOverviewIcon' class='col-xs-1 col-xs-offset-2 fadeInBottom'>
 				<img src="../resources/web-icon.jpg" class="img-responsive">
 			</div>
-			<div id='webOverview' class='col-xs-6 col-xs-offset-1 text overviewDescription'>
+			<div id='webOverview' class='col-xs-6 col-xs-offset-1 text fadeInRight'>
 				<span class='text-header'>WEB&nbsp;&nbsp;</span><span>While testing at PaperG, I fell in love with more web development oriented tasks. I chased this passion by tirelessly working on solo end-end web applications while receiving professional code reviews. I have now started contributing to front end development on a professional level.</span>
 			</div>
 		</div>
@@ -203,10 +203,10 @@
 			</header>
 		</div>
 		<div class='row section'>
-			<div class='col-xs-2 col-xs-offset-2'>
+			<div id='education' class='col-xs-2 col-xs-offset-2 fadeInBottom'>
 				<a href='https://www.digipen.edu/' target='_blank'><img src="../resources/digi-logo.png" class="img-responsive"></a>
 			</div>
-			<div class='col-xs-6 text'>
+			<div id='educationText' class='col-xs-6 text fadeInRight'>
 				<span class='text-header'>
 					DIGIPEN INSTITUTE OF TECHNOLOGY
 				</span><span>Redmond, WA</span>
@@ -223,7 +223,7 @@
 			</header>
 		</div>
 		<div class='section'>
-			<div class='col-xs-4 col-xs-offset-2 text'>
+			<div id='paperg' class='col-xs-4 col-xs-offset-2 text fadeInLeft'>
 				<span>
 					<a class='text-header' href='http://www.paperg.com/' target='_blank'>PaperG</a>
 				</span><span>Kirkland, WA</span>
@@ -239,7 +239,7 @@
 					I quickly grasped Javascript, Java, HTML, and CSS as well as several tools that allowed me to work more effectively. Within a week I was contributing code, and after 4 months, I was promoted. 
 				</p>
 			</div>
-			<div class='col-xs-4 text'>
+			<div id='digipen' class='col-xs-4 text fadeInRight'>
 				<span>
 					<a class='text-header' href='http://www.digipenresearch.com/' target='_blank'>DigiPen Institute of Technology</a>
 				</span><span>Redmond, WA</span>
