comment out professional web contribution for now

--- a/views/index.html
+++ b/views/index.html
@@ -132,7 +132,7 @@
 				<img src="../resources/web-icon.jpg" class="img-responsive">
 			</div>
 			<div id='webOverview' class='col-xs-6 col-xs-offset-1 text fadeInRight'>
-				<span class='text-header'>WEB&nbsp;&nbsp;</span><span>While testing at PaperG, I fell in love with more web development oriented tasks. I chased this passion by tirelessly working on solo end-end web applications while receiving professional code reviews. I have now started contributing to front end development on a professional level.</span>
+				<span class='text-header'>WEB&nbsp;&nbsp;</span><span>While testing at PaperG, I fell in love with more web development oriented tasks. I chased this passion by tirelessly working on solo end-end web applications while receiving professional code reviews. <!--I have now started contributing to front end development on a professional level.--></span>
 			</div>
 		</div>
 	</div>
