--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -49,6 +49,9 @@
 }
 
 .btn-default{
+	margin:0 2px;
+	border-radius: 3px;
+	font-size: 1.2em;
 
 	-webkit-transition: 0.2s ease-in-out;
     -moz-transition: 0.2s ease-in-out;
