final quotes added and contact text changed. Bug free and content complete. Will possibly add stat tracking in the future.

--- a/views/index.html
+++ b/views/index.html
@@ -84,10 +84,13 @@
 			<div id='review-carousel' class='carousel slide text-center'>
 				<div class='carousel-inner'>
 					<div class='item active'>
-						<P class='quote' style='text-align:left'>"Adam has been great to work with, I have worked with him on multiple game projects as well as side projects in our spare time. He is unbelievably hard working and motivated in everything he does."<br/><br/><b style='float:right'>-DAVID JAMES / SDE Microsoft</b></P>
+						<P class='quote' style='text-align:left'>"Adam has been great to work with. I have worked with him on multiple game projects, side projects in our spare time, and tutored with him. He is unbelievably hard working and motivated in everything he does."<br/><br/><b style='float:right'>-DAVID JAMES / SDE Microsoft</b></P>
 					</div>
 					<div class='item'>
 						<P class='quote' style='text-align:left'>"I've worked with Adam on two student games and couldn't recommend him more. He's a great programmer and always keeps his mind on the big picture. Both projects were delivered in a completed state and were fun to work on."<br/><br/><b style='float:right'>-JORDAN MAPLES / SDET Microsoft</b></p>
+					</div>
+					<div class='item'>
+						<p class='quote' style='text-align:left'>"Adam Estela is both knowledgeable and eager to learn new things, a rare combination for a programmer. I enjoyed working with him and would highly recommend Adam to anyone who asks."<br/><br/><b style='float:right'>-TREVOR HABA / SDE PaperG</b></p>
 					</div>
 					<div class='item'>
 						<P class='quote' style='text-align:left'>"Adam Estela is a friendly, high-performing team member. I'd enjoy working with him again any time."<br/><br/><b style='float:right'>-ANDREW NACK / Technical Designer Signal Studios</b></p>
@@ -98,6 +101,7 @@
 					<li data-target='#review-carousel' data-slide-to='0' class='active'></li>
 					<li data-target='#review-carousel' data-slide-to='1'></li>
 					<li data-target='#review-carousel' data-slide-to='2'></li>
+					<li data-target='#review-carousel' data-slide-to='3'></li>
 				</ol>
 			</div>
 		</div>
@@ -237,6 +241,13 @@
 						<li><p>Experimenting with potential tools and processes for further improvement</p></li>
 					</ul>
 					I quickly grasped Javascript, Java, HTML, and CSS as well as several tools that allowed me to work more effectively. Within a week I was contributing code, and after 4 months, I was promoted. 
+					<br/><br/>
+					<div style='width:90%; font-size:0.9em;margin-left:5%;border-top:1px solid grey;'>
+						<br/>
+						<span><i>"Adam Estela is both knowledgeable and eager to learn new things, a rare combination for a programmer. I enjoyed working with him and would highly recommend Adam to anyone who asks."</i></span>
+						<br/>
+						<p style='float:right'>-Trevor Haba / SDE PaperG</p>
+					</div>
 				</p>
 			</div>
 			<div id='digipen' class='col-xs-4 text fadeInRight'>
@@ -251,6 +262,13 @@
 						<li><p>English</p></li>
 					</ul>
 					I also served as the academic support tutor for CS, Mathematics, and English where I patiently assisted students through problems, aided in debugging, explained concepts, and offered encouragement. Near the end of my education, I interned in DigiPen's research and development department.
+					<br/><br/>
+					<div style='width:90%; font-size:0.9em;margin-left:5%;border-top:1px solid grey;'>
+						<br/>
+						<span><i>"Adam has been great to work with. I have worked with him on multiple game projects, side projects in our spare time, and tutored with him. He is unbelievably hard working and motivated in everything he does."</i></span>
+						<br/>
+						<p style='float:right'>-David James / SDE Microsoft</p>
+					</div>
 				</p>
 			</div>
 		</div>
@@ -326,7 +344,7 @@
 			<header class='col-xs-12 text-center section-title'>
 				<h1 class='inverse'>CONTACT</h1>
 				<div class='underline underline-inverse'></div>
-				<h2 class='inverse'>Currently interested in opportunities.</h2>
+				<h2 class='inverse'>Want to know more?</h2>
 			</header>
 		</div>
 		<div class='row'>
@@ -344,7 +362,7 @@
 				</div>
 			</div>
 			<div class='col-xs-4 col-xs-offset-1 section'>
-				<h2 style='color:white'><b>Let's chat!</b></h2>
+				<h2 style='color:white'>Hire me or just say hello!</h2>
 				<form class="form-horizontal" role="form" method='post'>
 				<div class="form-group">
 				    <label for="contactName" class="col-xs-1 control-label">Name</label>
