--- a/views/index.html
+++ b/views/index.html
@@ -72,7 +72,7 @@
 
 		<div class='row'>
 			<div class='social-icons'>
-				<a id='git-icon' class='icon' href='https://github.com/aconfee' target="_blank"></a>
+				<!--a id='git-icon' class='icon' href='https://github.com/aconfee' target="_blank"></a-->
 				<a id='linkedin-icon' class='icon' href='http://tinyurl.com/nact72n' target="_blank"></a>
 				<a id='youtube-icon' class='icon' href='http://tinyurl.com/khovsg2' target="_blank"></a>
 				<a id='facebook-icon' class='icon' href='http://tinyurl.com/mv258dp' target="_blank"></a>
@@ -233,12 +233,13 @@
 				</span><span>Kirkland, WA</span>
 				<p>Software Engineer in Test II / Feb 2013 - Current</p>
 				<p>
-					I'm expanding and improving our testing and CI platform by:
+					I'm leading test efforts, expanding and improving our testing and CI platform. Here's what I've done so far:
 					<ul>
-						<li><p>Making the CI process as transparent and easy for devs as possible</p></li>
-						<li><p>Preventing regression with thoughtfully automated core user experiences</p></li>
-						<li><p>Improving tests and tools to provide more reliable feedback</p></li>
-						<li><p>Experimenting with potential tools and processes for further improvement</p></li>
+						<li><p>Made the CI process transparent for devs with improved performance and custom features</p></li>
+						<li><p>Increased the reliability of UI tests with custom utilities, reducing false negatives from approximately 90% to 10%</p></li>
+						<li><p>Scaled UI test coverage across multiple browsers and user cases to consistently catch product regressions</p></li>
+						<li><p>Lead and organized test efforts to unify QA and automation and increase test usage among feature teams</p></li>
+						<li><p>Gave presentations to help team grow. Offered and recieved technical help on a daily basis to encourage a culture of growth and collaboration and become a stronger developer</p></li>
 					</ul>
 					I quickly grasped Javascript, Java, HTML, and CSS as well as several tools that allowed me to work more effectively. Within a week I was contributing code, and after 4 months, I was promoted. 
 					<br/><br/>
